--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "displayName": "Security Verificator",
   "description": "Previna vulnerabilidades de segurança em qualquer linguagem de programação.",
   "publisher": "KevilinRodrigues",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.83.0"
   },
   "categories": [
     "Other"
   ],
+  "icon": "images/logo.png",
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "security-verificator.helloWorld",
-        "title": "Hello World"
+        "command": "security-verificator.checarSeguranca",
+        "title": "Checar segurança"
       }
     ]
   },
@@ -29,15 +30,18 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.83.0",
     "@types/mocha": "^10.0.2",
     "@types/node": "18.x",
+    "@types/vscode": "^1.83.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
+    "@vscode/test-electron": "^2.3.4",
     "eslint": "^8.50.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
-    "typescript": "^5.2.2",
-    "@vscode/test-electron": "^2.3.4"
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "axios": "^1.6.0"
   }
 }
