--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "displayName": "Security Verificator",
   "description": "Previna vulnerabilidades de segurança em qualquer linguagem de programação.",
   "publisher": "KevilinRodrigues",
-  "version": "0.1.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Kevilin/security-verificator"
+},
+  "version": "0.1.2",
   "engines": {
     "vscode": "^1.83.0"
   },
